// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`setNameservers given: [case1] domain with squarespace default nameservers when: [t0] before any changes then: full entity matches snapshot (null case) 1`] = `
DeclaredSquarespaceDomainNameservers {
  "domain": DomainLiteral {
    "name": "sunshineoceansurferturtles.com",
  },
  "nameservers": null,
}
`;

exports[`setNameservers given: [case1] domain with squarespace default nameservers when: [t1] setNameservers upsert to cloudflare then: full entity matches snapshot (custom case) 1`] = `
DeclaredSquarespaceDomainNameservers {
  "domain": DomainLiteral {
    "name": "sunshineoceansurferturtles.com",
  },
  "nameservers": [
    "ns1.cloudflare.com",
    "ns2.cloudflare.com",
  ],
}
`;

exports[`setNameservers given: [case5] validation errors when: [t0] fewer than 2 nameservers then: error matches snapshot 1`] = `
{
  "errorMessage": "BadRequestError: nameservers must have at least 2 entries

{
  "count": 1,
  "nameservers": [
    "ns1.cloudflare.com"
  ]
}",
  "errorName": "Error",
}
`;

exports[`setNameservers given: [case5] validation errors when: [t0] fewer than 2 nameservers then: full result matches snapshot 1`] = `null`;

exports[`setNameservers given: [case5] validation errors when: [t1] invalid FQDN format then: error matches snapshot 1`] = `
{
  "errorMessage": "BadRequestError: invalid nameserver format: not-a-valid-fqdn

{
  "nameserver": "not-a-valid-fqdn",
  "hint": "nameserver must be a valid fully qualified domain name"
}",
  "errorName": "Error",
}
`;

exports[`setNameservers given: [case5] validation errors when: [t1] invalid FQDN format then: full result matches snapshot 1`] = `null`;

exports[`setNameservers given: [case5] validation errors when: [t2] more than 13 nameservers then: error matches snapshot 1`] = `
{
  "errorMessage": "BadRequestError: nameservers cannot exceed 13 entries

{
  "count": 14,
  "hint": "RFC 1035 limits NS records to 13"
}",
  "errorName": "Error",
}
`;

exports[`setNameservers given: [case5] validation errors when: [t2] more than 13 nameservers then: full result matches snapshot 1`] = `null`;
